# resource_management

./: .gitmodules  LICENSE  README.md
resource_management/: CMakeLists.txt  resource_management.sln  resource_management.vcxproj  resource_management.vcxproj.filters
resource_management/gtest/: CMakeLists.txt  ResourceManagerTest.cpp
resource_management/include/: AResource.h  AUser.h  AbstractFactory.h  AbstractResourceFactory.h  AbstractUserFactory.h  CCustomeException.h  CGeneralResource.h  CGeneralUser.h  CResourceManager.h  CUserManager.h  ResourceFactory.h  UserFactory.h
resource_management/src/: AResource.cpp  AUser.cpp  AbstractUserFactory.cpp  CCustomeException.cpp  CGeneralResource.cpp  CGeneralUser.cpp  CResourceManager.cpp  CUserManager.cpp  Main.cpp  ResourceFactory.cpp  UserFactory.cpp
